[package]
name = "mtl-text"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
winit = "0.26.0"
smallvec = "1.6.1"
swash = "0.1.4"
etagere = "0.2.6"

metal = "0.22"
cocoa = "0.24.0"
objc = "0.2.5"

#piet-gpu = { path = "../piet-gpu/piet-gpu" }
#piet-gpu-hal = { path = "../piet-gpu/piet-gpu-hal" }
piet-gpu = { git = "https://github.com/linebender/piet-gpu", rev = "2613a7e" }
piet-gpu-hal = { git = "https://github.com/linebender/piet-gpu", rev = "2613a7e" }
